Fixed horizontal overflow

--- a/Tech Path/style.css
+++ b/Tech Path/style.css
@@ -1,14 +1,17 @@
 body {
     margin: 0;
-    padding: 0;  
-} 
-.main-body{
+    padding: 0;
+}
+
+.main-body {
+    margin: auto;
     padding-top: 20px;
     padding-bottom: 100px;
     text-align: center;
     align-items: center;
 }
-.main-body-col{
+
+.main-body-col {
     align-items: center;
     padding: 50px;
 }
@@ -18,14 +21,18 @@ body {
     padding-left: 50px;
     padding-right: 100px;
     text-align: left;
-    width: 480px;
+    width: 400px;
     height: 300px;
     color: #1A6692;
     box-shadow: black;
 }
+
 .image {
- width: 75%;
- height: 75%;
- align-self: center;
+    width: 75%;
+    height: 75%;
+    align-self: center;
 }
 
+/* p {
+    font-size: med;
+} */
